# 4CPPScheme2

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  coverage.ps1  q.scm  rec_q.scm
.claude/: settings.json
.github/workflows/: ci.yml
bench/: arith.scm  arith_cpp.scm  calibrate_tco.ps1  dispatch.scm  dispatch_cpp.scm  env_lookup.scm
build3/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cekscheme.slnx  cekscheme.vcxproj  cekscheme.vcxproj.filters  cekscheme_core.vcxproj  cekscheme_core.vcxproj.filters  cmake_install.cmake
build3/Debug/: cekscheme_core.exp  cekscheme_core.lib
build3/cekscheme.dir/Debug/: cekscheme.exe.recipe  cekscheme.ilk
build3/cekscheme.dir/Debug/cekscheme.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build3/cekscheme_core.dir/Debug/: cekscheme_core.dll.recipe
build3/cekscheme_core.dir/Debug/cekscheme_core.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.write.1.tlog  cekscheme_core.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build3/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
build3/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.read.1.tlog
build3/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
build3/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
examples/: example_plugin.cpp
hooks/: pre-push
src/: AST.cpp  AST.h  Context.cpp  Context.h  Debugger.cpp  Debugger.h  Interpreter.cpp  Interpreter.h  Listener.cpp  Listener.h  PrettyPrinter.cpp  PrettyPrinter.h  Tracer.cpp  Tracer.h  Utils.cpp  Utils.h  analyzer.cpp  analyzer.h  common_dir.cpp  common_dir.h  dir_list.cpp  dir_list.h  environment.cpp  environment.h  evaluator.cpp  evaluator.h  evaluator_stubs.cpp  exceptions.h  expander.cpp  expander.h  gc.h  gc_gen.cpp  gc_test_api.h  library.cpp  library.h  main.cpp  parser.cpp  parser.h  plugin_api_impl.cpp  plugin_loader.cpp  (+25 more)
src/mini-gmp/: mini-gmp.h
src/primitives/: arithmetic.cpp  arithmetic.h  binding.cpp  binding.h  bytevectors.cpp  bytevectors.h  chars.cpp  chars.h  comparison.cpp  comparison.h  control.cpp  control.h  debug.cpp  debug.h  equivalence.cpp  equivalence.h  help_sys.cpp  help_sys.h  lazy.cpp  lazy.h  lists.cpp  lists.h  logical.cpp  logical.h  macros.cpp  macros.h  meta.cpp  meta.h  modules.cpp  modules.h  ports.cpp  ports.h  predicates.cpp  predicates.h  primitives.cpp  primitives.h  quotation.cpp  quotation.h  strings.cpp  strings.h  (+2 more)
testing/runs/: test-2026-05-21-172004.run  test-2026-05-21-191449.run  test-2026-05-22-092213.run
tests/: gc_test.cpp
undercarriage-tests/: gc_test.cpp  plugin-import-test.sh  rat_test.cpp
